P2G-976 [Product Grid] Component is missing if contains ImageTeaser

--- a/view/frontend/templates/component/image_teaser/slide_elements/image.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/image.phtml
@@ -38,7 +38,7 @@ if ($isWebpSupported) {
 /**
  * Conditional lazy loading
  */
-$isLazyLoaded = !strpos($imageTeaserData['type'], 'HeroCarousel');
+$isLazyLoaded = isset($imageTeaserData['type']) ? !strpos($imageTeaserData['type'], 'HeroCarousel') : false;
 $dataPrefix = $isLazyLoaded ? 'data-' : '';
 ?>
 <?php if ($hasImage): ?>
