[KRG-146] Adds possibility to read text position config. from view.xml

--- a/view/frontend/templates/component/cms_teaser.phtml
+++ b/view/frontend/templates/component/cms_teaser.phtml
@@ -10,7 +10,7 @@ $componentConfiguration['scenario'] = array_merge(
     [
         'teaserWidth' => ['id' => 'container'],
         'desktopLayout' => ['id' => $componentConfiguration['currentScenario']['desktopLayout']['id']],
-        'contentPlacement' => ['id' => 'over'],
+        'contentPlacement' => ['id' => $block->getVar('cms_teaser/content_placement')],
         'mobileLayout' => ['id' => $componentConfiguration['currentScenario']['mobileLayout']['id']]
     ],
     $componentConfiguration['scenario'] ?? []
