--- a/view/frontend/templates/component/image_teaser/slide_elements/image.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/image.phtml
@@ -38,7 +38,9 @@ if ($isWebpSupported) {
 /**
  * Conditional lazy loading
  */
-$isLazyLoaded = isset($imageTeaserData['type']) ? !strpos($imageTeaserData['type'], 'HeroCarousel') : false;
+$isLazyLoaded = isset($imageTeaserData['type'])
+    ? !((bool) strpos($imageTeaserData['type'], 'HeroCarousel'))
+    : true;
 $dataPrefix = $isLazyLoaded ? 'data-' : '';
 ?>
 <?php if ($hasImage): ?>
