Adjust IE11 Image Teaser image tag logic fix

--- a/view/frontend/templates/component/image_teaser/slide_elements/image.phtml
+++ b/view/frontend/templates/component/image_teaser/slide_elements/image.phtml
@@ -89,7 +89,7 @@ $dataPrefix = $isLazyLoaded ? 'data-' : '';
                 <?= ($isSlider || $isSliderMobile) && $isLazyLoaded ? ' swiper-lazy' : '' ?>
                 <?= $mirrorImage ? ' cs-image-teaser__image--mirror' : '' ?>"
             alt="<?= $imageAlt ?>"
-            src="<?= $origImageSrc ?>"
+            src="<?= $isLazyLoaded ? $imageSrc : $origImageSrc ?>"
             <?php if ($imageSrcset): ?>
                 <?= $dataPrefix ?>srcset="<?= $imageSrcset ?>"
             <?php endif; ?>
