--- a/view/frontend/templates/component/accordion.phtml
+++ b/view/frontend/templates/component/accordion.phtml
@@ -1,5 +1,65 @@
 <?php
 /** @var $block \MageSuite\ContentConstructorFrontend\Block\Component\Accordion */
+$componentConfiguration = $block->getData();
+$visibility = $block->getVisibilityClass();
+$componentClasses = $block->getSkipSpacing() ? ' cs-accordion--skip-spacing ' : '';
 
-echo 'accordion component'
+$areGroupsSupported = $block->getVar('accordion/support_groups', 'MageSuite_ContentConstructor');
+$groups = $componentConfiguration['groups'];
+
+$accordionOptionsComponent = [
+    "openedState" => "cs-accordion__item--active",
+    "multipleCollapsible" => $componentConfiguration['multiple_collapsible'],
+    "active" => $componentConfiguration['expand_first'] ? "0" : ""
+];
+$accordionOptionsGlobal = $block->getVar('accordion/accordion_options', 'MageSuite_ContentConstructor') ?? [];
+$accordionOptions = array_merge($accordionOptionsComponent, $accordionOptionsGlobal);
 ?>
+
+<div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
+    <div class="cs-container cs-container--accordion">
+        <div class="cs-container__inner">
+            <?php if (count($groups)): ?>
+                <div class="cs-accordion<?= $componentClasses ?>">
+                    <ul class="cs-accordion__groups">
+                        <?php foreach ($groups as $group): ?>
+                            <li class="cs-accordion__group">
+                                <?php if($areGroupsSupported && !empty($group['headline'])): ?>
+                                    <div class="cs-accordion__group-headline">
+                                        <span class="cs-accordion__group-headline-span"><?= $group['headline']; ?></span>
+                                    </div>
+                                <?php endif; ?>
+
+                                <ul class="cs-accordion__items" data-mage-init='{
+                                    "accordion": <?= json_encode($accordionOptions) ?>
+                                }'>
+                                    <?php $i = 0; ?>
+                                    <?php foreach ($group['items'] as $item): ?>
+                                        <li class="cs-accordion__item<?php if($componentConfiguration['expand_first'] && $i == 0): ?> cs-accordion__item--active<?php endif; ?>" data-role="collapsible">
+                                            <div class="cs-accordion__item-headline" data-role="trigger">
+                                                <span class="cs-accordion__item-headline-span">
+                                                    <?= $block->escapeHtml($item['headline']) ?>
+                                                    <?= $this->getLayout()
+                                                            ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
+                                                            ->setIconUrl($block->getVar('accordion/arrow_icon', 'MageSuite_ContentConstructorFrontend'))
+                                                            ->setCssClass('cs-accordion__item-headline-icon')
+                                                            ->setInlined(true)
+                                                            ->toHtml(); 
+                                                    ?>
+                                                <span>
+                                            </div>
+                                            <div class="cs-accordion__item-content" data-role="content">
+                                                <?= $item['content']; ?>
+                                            </div>
+                                        </li>
+                                        <?php $i++; ?>
+                                    <?php endforeach; ?>
+                                </ul>
+                            </li>
+                        <?php endforeach; ?>
+                    </ul>
+                </div>
+            <?php endif; ?>
+        </div>
+    </div>
+</div>
