Fix product finder class value for tablets - it took value for mobile

--- a/view/frontend/templates/component/product_finder.phtml
+++ b/view/frontend/templates/component/product_finder.phtml
@@ -22,7 +22,7 @@ $componentClasses .= ' ' . $block->getVar('product_finder/additional_css_classes
                     $stepClasses = [];
 
                     $stepClasses[] = "cs-product-finder__step--options-mobile_".$stepOptionsPerRow['mobile'];
-                    $stepClasses[] = "cs-product-finder__step--options-tablet_".$stepOptionsPerRow['mobile'];
+                    $stepClasses[] = "cs-product-finder__step--options-tablet_".$stepOptionsPerRow['tablet'];
                     $stepClasses[] = " cs-product-finder__step--options-desktop_".$stepOptionsPerRow['desktop'];
                     $stepClasses[] = $step['additional_css_class'];
 
