--- a/view/frontend/templates/component/category_links.phtml
+++ b/view/frontend/templates/component/category_links.phtml
@@ -6,30 +6,31 @@ $categories = $viewModel->getCategories();
 $subCategories = $categories['sub_categories'];
 $shouldShowProductsCount = $viewModel->shouldShowProductsCount();
 $visibility = $block->getVisibilityClass();
+$hasSubcategories = $viewModel->hasSubcategories();
 
-$componentClasses = $viewModel->hasSubcategories() ? ' ' : " cs-category-links--no-subcats";
-$componentClasses .= $block->getSkipSpacing() ? ' cs-category-links--skip-spacing' : ''; 
+$componentClasses = $hasSubcategories ? ' ' : " cs-category-links--no-subcats";
+$componentClasses .= $block->getSkipSpacing() ? ' cs-category-links--skip-spacing' : '';
 $componentClasses .= ' ' . $block->getVar('category_links/additional_css_classes');
 ?>
 
 <div <?= $visibility ? 'class="' . $visibility . '"' : ''; ?>>
     <div class="cs-container cs-container--category-links">
         <div class="cs-container__inner">
-            <div class="cs-category-links<?= $componentClasses ?>" data-mage-init='{"collapsible":{"mediaQueryScope":"(max-width: 767px)"}}'>
+            <div class="cs-category-links<?= $componentClasses ?>" <?php if($hasSubcategories): ?>data-mage-init='{"collapsible":{"mediaQueryScope":"(max-width: 767px)"}}'<?php endif;?>>
             <?php if($block->getVar('category_links/show_title')): ?>
                 <h2 class="cs-category-links__title"><?= $categories['main_category']['name'] ?></h2>
             <?php endif; ?>
 
-                <div class="cs-category-links__dropdown cs-category-links-dropdown <?php if(!$viewModel->hasSubcategories()): ?> cs-category-links-dropdown--no-subcats <?php endif; ?>">
+                <div class="cs-category-links__dropdown cs-category-links-dropdown <?php if(!$hasSubcategories): ?> cs-category-links-dropdown--no-subcats <?php endif; ?>">
                     <?php
-                    if($viewModel->hasSubcategories()): ?>
+                    if($hasSubcategories): ?>
                     <div class="cs-category-links__subtitle | cs-category-links-dropdown__trigger" data-role="title">
                         <?=__('All Products')?> <?php if($shouldShowProductsCount): ?><span class="cs-category-links__qty"><?=$categories['main_category']['products_count']?></span><?php endif; ?>
                     </div>
                     <?php endif; ?>
 
                     <div class="cs-category-links__list-wrapper | cs-category-links-dropdown__content" data-role="content">
-                        <?php if($viewModel->hasSubcategories()): ?>
+                        <?php if($hasSubcategories): ?>
                         <ul class="cs-category-links__list">
                             <?php $i = 1; ?>
                             <?php foreach($subCategories as $category): ?>
@@ -52,14 +53,14 @@ $componentClasses .= ' ' . $block->getVar('category_links/additional_css_classes
                         <ul class="cs-category-links__list-all">
                             <li class="cs-category-links__list-all-item">
                                 <a href="<?=$categories['main_category']['url']?>" class="cs-category-links__link">
-                                    <?php echo __($block->getVar('category_links/all_products/label')); ?> 
+                                    <?= __($block->getVar('category_links/all_products/label')); ?>
                                     <?php if($shouldShowProductsCount): ?><span class="cs-category-links__qty"><?=$categories['main_category']['products_count']?></span><?php endif; ?>
                                     <?= $this->getLayout()
                                             ->createBlock('MageSuite\ThemeHelpers\Block\Icon')
                                             ->setIconUrl($block->getVar('category_links/all_products/icon'))
                                             ->setCssClass('cs-category-links__list-all-icon')
                                             ->setInlined(true)
-                                            ->toHtml(); 
+                                            ->toHtml();
                                     ?>
                                 </a>
                             </li>
